--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web" 
+    "web": "expo start --web"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "^49.0.23",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.1",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.3.1",
+    "@types/react": "~18.2.79",
     "react-native-dotenv": "^3.4.11"
   },
   "private": true
