--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "expo": "^51.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "expo-sqlite": "~14.0.3",
+    "expo-file-system": "~17.0.1",
+    "expo-asset": "~10.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
