--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
     "expo": "^51.0.1",
+    "expo-asset": "~10.0.6",
+    "expo-file-system": "~17.0.1",
+    "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "expo-sqlite": "~14.0.3",
-    "expo-file-system": "~17.0.1",
-    "expo-asset": "~10.0.6"
+    "react-native-elements": "^3.4.3",
+    "react-native-safe-area-context": "^4.10.4",
+    "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
