--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-file-system": "~17.0.1",
     "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-elements": "^3.4.3",
